docs-archive/apache-airflow/2.5.2/_sources/_api/airflow/example_dags/plugins/event_listener/index.rst.txt
:py:mod:`airflow.example_dags.plugins.event_listener`
=====================================================

.. py:module:: airflow.example_dags.plugins.event_listener


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   airflow.example_dags.plugins.event_listener.on_task_instance_running
   airflow.example_dags.plugins.event_listener.on_task_instance_success
   airflow.example_dags.plugins.event_listener.on_task_instance_failed
   airflow.example_dags.plugins.event_listener.on_dag_run_success
   airflow.example_dags.plugins.event_listener.on_dag_run_failed
   airflow.example_dags.plugins.event_listener.on_dag_run_running



.. py:function:: on_task_instance_running(previous_state, task_instance, session)

   This method is called when task state changes to RUNNING.
   Through callback, parameters like previous_task_state, task_instance object can be accessed.
   This will give more information about current task_instance that is running its dag_run,
   task and dag information.


.. py:function:: on_task_instance_success(previous_state, task_instance, session)

   This method is called when task state changes to SUCCESS.
   Through callback, parameters like previous_task_state, task_instance object can be accessed.
   This will give more information about current task_instance that has succeeded its
   dag_run, task and dag information.


.. py:function:: on_task_instance_failed(previous_state, task_instance, session)

   This method is called when task state changes to FAILED.
   Through callback, parameters like previous_task_state, task_instance object can be accessed.
   This will give more information about current task_instance that has failed its dag_run,
   task and dag information.


.. py:function:: on_dag_run_success(dag_run, message)

   This method is called when dag run state changes to SUCCESS.


.. py:function:: on_dag_run_failed(dag_run, message)

   This method is called when dag run state changes to FAILED.


.. py:function:: on_dag_run_running(dag_run, message)

   This method is called when dag run state changes to RUNNING.


