docs-archive/apache-airflow/3.0.0/_sources/_api/airflow/example_dags/plugins/event_listener/index.rst.txt
airflow.example_dags.plugins.event_listener
===========================================

.. py:module:: airflow.example_dags.plugins.event_listener


Functions
---------

.. autoapisummary::

   airflow.example_dags.plugins.event_listener.on_task_instance_running
   airflow.example_dags.plugins.event_listener.on_task_instance_success
   airflow.example_dags.plugins.event_listener.on_task_instance_failed
   airflow.example_dags.plugins.event_listener.on_dag_run_success
   airflow.example_dags.plugins.event_listener.on_dag_run_failed
   airflow.example_dags.plugins.event_listener.on_dag_run_running


Module Contents
---------------

.. py:function:: on_task_instance_running(previous_state, task_instance)

   Called when task state changes to RUNNING.

   previous_task_state and task_instance object can be used to retrieve more information about current
   task_instance that is running, its dag_run, task and dag information.


.. py:function:: on_task_instance_success(previous_state, task_instance)

   Called when task state changes to SUCCESS.

   previous_task_state and task_instance object can be used to retrieve more information about current
   task_instance that has succeeded, its dag_run, task and dag information.

   A RuntimeTaskInstance is provided in most cases, except when the task's state change is triggered
   through the API. In that case, the TaskInstance available on the API server will be provided instead.


.. py:function:: on_task_instance_failed(previous_state, task_instance, error)

   Called when task state changes to FAILED.

   previous_task_state, task_instance object and error can be used to retrieve more information about current
   task_instance that has failed, its dag_run, task and dag information.

   A RuntimeTaskInstance is provided in most cases, except when the task's state change is triggered
   through the API. In that case, the TaskInstance available on the API server will be provided instead.


.. py:function:: on_dag_run_success(dag_run, msg)

   This method is called when dag run state changes to SUCCESS.


.. py:function:: on_dag_run_failed(dag_run, msg)

   This method is called when dag run state changes to FAILED.


.. py:function:: on_dag_run_running(dag_run, msg)

   This method is called when dag run state changes to RUNNING.


